Add other stuff

--- a/src/app/jan/jan.component.html
+++ b/src/app/jan/jan.component.html
@@ -1,16 +1,17 @@
-<p>jan works!</p>
-
 <mat-card>
   <mat-card-header><h2>Foto 1</h2></mat-card-header>
   <mat-card-content><img class="card-image" src="assets/pictures/jan/high/wasserhahn_vorher.jpg"/></mat-card-content>
   <mat-card-footer>ISO:<br/>Blende:</mat-card-footer>
 </mat-card>
 
-<div id="slider" class="beer-slider" data-beer-label="before">
-  <img src="assets/pictures/jan/high/wasserhahn_vorher.jpg" alt="">
-  <div class="beer-reveal" data-beer-label="after">
-    <img src="assets/pictures/jan/high/wasserhahn_nachher.jpg" alt="">
+<div id="slider" class="beer-slider" data-beer-label="Original" data-beer-start="50">
+  <img src="assets/pictures/jan/high/wasserhahn_vorher.jpg" alt="bild1">
+  <div class="beer-reveal" data-beer-label="Bearbeitet">
+    <img src="assets/pictures/jan/high/wasserhahn_nachher.jpg" alt="bild2">
   </div>
 </div>
 
-<script>new BeerSlider(document.getElementById('slider'));</script>
+<script src="https://unpkg.com/beerslider/dist/BeerSlider.js"></script>
+<script>
+  new BeerSlider(document.getElementById('slider'));
+</script>
