style changes, logic changes, switched to fxLayout, upgraded to angular 9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<h1>Website</h1>
-
-<a routerLink=''>Home</a>
-
-<h2>Photopages</h2>
-<ul>
-  <li><a routerLink='jan'>Jan</a></li>
-  <li><a routerLink='janic'>Janic</a></li>
-  <li><a routerLink='marco'>Marco</a></li>
-</ul>
-
+<mat-toolbar color="primary" class="mat-elevation-z3">Modul 153</mat-toolbar>
 <router-outlet></router-outlet>
