Final video margin update

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -6,7 +6,7 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </mat-card-content>
   </mat-card>
-  <mat-card class="video-card">
+  <mat-card class="video-card last-video-card">
     <mat-card-header><h2>The Sims 4 Trailer</h2></mat-card-header>
     <mat-card-content>
       <video class="video" src="assets/videos/The_Sims_4_Launch_Trailer.mp4" controls></video>
