--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z3">
   <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
-    <p>Modul 153</p>
+    <p>Modul 153 - Team Website</p>
     <div>
       <button mat-button routerLink="photos">Fotogalerie</button>
       <button mat-button routerLink="videos">Videogalerie</button>
