--- a/src/app/fullscreen-dialog/fullscreen-dialog.component.html
+++ b/src/app/fullscreen-dialog/fullscreen-dialog.component.html
@@ -1,21 +1,20 @@
-<button style="float: right" mat-icon-button (click)="onNoClick()">
-  <mat-icon>close</mat-icon>
-</button>
-<div [id]="data + '-slider-fullscreen'" class="beer-slider" data-beer-label="Original" data-beer-start="50">
-  <ng-container *ngIf="!data.hasOriginal">
-    <img style="object-fit: scale-down;"
-         [src]="'assets/pictures/' + data.path + '/unbearbeitet/' + data.filename + '.jpg'" alt="Original">
-    <div class="beer-reveal" data-beer-label="Bearbeitet">
-      <img style="object-fit: scale-down;"
-           [src]="'assets/pictures/' + data.path + '/bearbeitet/' + data.filename + '.jpg'" alt="Bearbeitet">
-    </div>
-  </ng-container>
-  <ng-container *ngIf="data.hasOriginal">
-    <img style="object-fit: scale-down;"
-         [src]="'assets/pictures/' + data.path + '/highres/unbearbeitet/' + data.filename + '.jpg'" alt="Original">
-    <div class="beer-reveal" data-beer-label="Bearbeitet">
-      <img style="object-fit: scale-down;"
-           [src]="'assets/pictures/' + data.path + '/highres/bearbeitet/' + data.filename + '.jpg'" alt="Bearbeitet">
-    </div>
-  </ng-container>
+<div fxLayout="column" fxLayoutAlign="center center">
+  <div [id]="data + '-slider-fullscreen'" class="beer-slider" data-beer-label="Original" data-beer-start="50" style="max-width: 60vw">
+    <ng-container *ngIf="!data.hasOriginal">
+      <img style="object-fit: contain"
+           [src]="'assets/pictures/' + data.path + '/unbearbeitet/' + data.filename + '.jpg'" alt="Original">
+      <div class="beer-reveal" data-beer-label="Bearbeitet">
+        <img style="object-fit: contain"
+             [src]="'assets/pictures/' + data.path + '/bearbeitet/' + data.filename + '.jpg'" alt="Bearbeitet">
+      </div>
+    </ng-container>
+    <ng-container *ngIf="data.hasOriginal">
+      <img style="object-fit: contain"
+           [src]="'assets/pictures/' + data.path + '/highres/unbearbeitet/' + data.filename + '.jpg'" alt="Original">
+      <div class="beer-reveal" data-beer-label="Bearbeitet">
+        <img style="object-fit: contain"
+          [src]="'assets/pictures/' + data.path + '/highres/bearbeitet/' + data.filename + '.jpg'" alt="Bearbeitet">
+      </div>
+    </ng-container>
+  </div>
 </div>
