--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z3">
   <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
-    <p>Modul 152 - Team Website</p>
+    <p>Team Website</p>
     <div>
       <button mat-button [style.text-decoration]="isCurrentComponent('preview') ? 'underline' : 'none'" (click)="switchComponent('preview')">Fotogalerie</button>
       <button mat-button [style.text-decoration]="isCurrentComponent('video') ? 'underline' : 'none'" (click)="switchComponent('video')">Videogalerie</button>
