--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group #tabGroup (selectedTabChange)="initCollection($event)">
   <mat-tab [label]="collection.autor" *ngFor="let collection of collections; let index = index">
       <div style="margin: 20px">
-        <div fxLayout="column" fxLayout.gt-md="row" fxLayoutAlign="space-evenly center" fxLayoutAlign.gt-md="space-evenly center" fxLayoutGap="25px">
-        <mat-card style="width: 100%" *ngFor="let picture of collection.pictures">
+        <div fxLayout="column" fxLayout.gt-md="row" fxLayoutAlign="space-evenly start" fxLayoutAlign.gt-md="space-evenly start" fxLayoutGap="25px">
+        <mat-card style="width: calc(100% - 25px)" *ngFor="let picture of collection.pictures">
           <mat-card-header>
             <mat-card-title>{{picture.title}}</mat-card-title>
             <button *ngIf="collection.hasOriginal" style="position: absolute; right: 10px;" mat-icon-button (click)="openFullscreenDialog(collection.path, picture.filename, collection.hasOriginal)" matTooltip="Bilder in voller Auflösung anzeigen" matTooltipPosition="left"><mat-icon>fullscreen</mat-icon></button>
